--- a/app/app/src/main/res/layout/fragment_profile.xml
+++ b/app/app/src/main/res/layout/fragment_profile.xml
@@ -75,10 +75,8 @@
             android:id="@+id/profileBanner"
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            android:layout_marginTop="120dp"
             android:scaleType="fitXY"
-            android:src="@mipmap/profile_top_banner"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:src="@mipmap/profile_top_banner" />
 
 
         <LinearLayout
