--- a/app/app/src/main/res/xml/profile_motion.xml
+++ b/app/app/src/main/res/xml/profile_motion.xml
@@ -68,6 +68,15 @@
             app:layout_constraintTop_toBottomOf="@+id/name" />
 
 
+        <Constraint
+            android:alpha="1"
+            android:id="@+id/profileBanner"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_marginTop="120dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
     </ConstraintSet>
 
 
@@ -123,6 +132,15 @@
             app:layout_constraintBottom_toTopOf="@+id/content"
             app:layout_constraintRight_toLeftOf="@+id/avatarHolder"
             app:layout_constraintTop_toBottomOf="@+id/name" />
+
+
+        <Constraint
+            android:alpha="0"
+            android:id="@+id/profileBanner"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_marginTop="120dp"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </ConstraintSet>
