--- a/app/app/src/main/res/layout/fragment_signals.xml
+++ b/app/app/src/main/res/layout/fragment_signals.xml
@@ -7,6 +7,8 @@
     </data>
 
     <LinearLayout
+        android:paddingTop="10dp"
+        android:clipToPadding="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".main.profile.SignalsFragment">
