--- a/app/app/src/main/res/xml/profile_motion.xml
+++ b/app/app/src/main/res/xml/profile_motion.xml
@@ -33,9 +33,9 @@
             android:id="@+id/infoHolder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="25dp"
+            android:layout_marginEnd="15dp"
             android:layout_marginBottom="30dp"
             android:alpha="1"
             app:layout_constraintTop_toBottomOf="@+id/profileBanner" />
@@ -69,11 +69,11 @@
 
 
         <Constraint
-            android:alpha="1"
             android:id="@+id/profileBanner"
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:layout_marginTop="120dp"
+            android:alpha="1"
             app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -103,9 +103,9 @@
             android:id="@+id/infoHolder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="25dp"
+            android:layout_marginEnd="15dp"
             android:layout_marginBottom="30dp"
             android:alpha="0"
             android:scaleX="0.3"
@@ -118,28 +118,27 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/content"
+            android:layout_marginStart="15dp"
             app:layout_constraintRight_toLeftOf="@+id/avatarHolder"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/exit" />
 
 
         <Constraint
+            android:layout_marginTop="10dp"
             android:id="@+id/expire"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/content"
+            android:layout_marginStart="15dp"
             app:layout_constraintRight_toLeftOf="@+id/avatarHolder"
             app:layout_constraintTop_toBottomOf="@+id/name" />
 
 
         <Constraint
-            android:alpha="0"
             android:id="@+id/profileBanner"
             android:layout_width="match_parent"
             android:layout_height="170dp"
             android:layout_marginTop="120dp"
+            android:alpha="0"
             app:layout_constraintTop_toTopOf="parent" />
 
 
