--- a/app/app/src/main/res/layout/fragment_profile.xml
+++ b/app/app/src/main/res/layout/fragment_profile.xml
@@ -20,6 +20,7 @@
 
 
         <RelativeLayout
+
             android:id="@+id/avatarHolder"
             android:layout_width="140dp"
             android:layout_height="140dp"
@@ -62,16 +63,6 @@
             android:textAppearance="@style/vazir_font"
             android:textColor="@color/gray" />
 
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/refresh"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/avatarHolder"
-            app:layout_constraintTop_toTopOf="parent">
-            <View
-                android:layout_width="200dp"
-                android:layout_height="200dp" />
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <ImageView
             android:id="@+id/profileBanner"
@@ -222,6 +213,19 @@
                 android:indeterminate="true" />
         </LinearLayout>
 
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:elevation="10dp"
+            android:id="@+id/refresh"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/avatarHolder"
+            app:layout_constraintTop_toTopOf="parent">
+            <View
+                android:layout_width="200dp"
+                android:layout_height="200dp" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
         <ImageView
             android:id="@+id/exit"
             android:layout_width="35dp"
@@ -231,6 +235,8 @@
             android:src="@drawable/ic_profile_menu"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 
