--- a/app/app/src/main/res/xml/profile_motion.xml
+++ b/app/app/src/main/res/xml/profile_motion.xml
@@ -83,6 +83,8 @@
     <ConstraintSet android:id="@+id/ending_set">
 
         <Constraint
+            android:scaleY="0.85"
+            android:scaleX="0.85"
             android:id="@+id/avatarHolder"
             android:layout_width="140dp"
             android:layout_height="140dp"
