--- a/app/app/src/main/res/layout/fragment_profile.xml
+++ b/app/app/src/main/res/layout/fragment_profile.xml
@@ -10,7 +10,6 @@
             type="com.kharazmic.app.main.profile.ProfileViewModel" />
     </data>
 
-
     <androidx.constraintlayout.motion.widget.MotionLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -183,10 +182,10 @@
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:elevation="5dp"
-                app:tabMode="scrollable"
+                app:tabMode="fixed"
                 app:tabSelectedTextColor="@color/black"
                 app:tabTextAppearance="@style/vazir_font"
                 app:tabTextColor="@color/gray" />
@@ -214,12 +213,13 @@
         </LinearLayout>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:elevation="10dp"
             android:id="@+id/refresh"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:elevation="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/avatarHolder"
             app:layout_constraintTop_toTopOf="parent">
+
             <View
                 android:layout_width="200dp"
                 android:layout_height="200dp" />
@@ -227,7 +227,7 @@
 
 
         <ImageView
-            android:id="@+id/exit"
+            android:id="@+id/menu"
             android:layout_width="35dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -235,8 +235,6 @@
             android:src="@drawable/ic_profile_menu"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 
