--- a/app/app/src/main/res/xml/profile_motion.xml
+++ b/app/app/src/main/res/xml/profile_motion.xml
@@ -122,7 +122,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             app:layout_constraintRight_toLeftOf="@+id/avatarHolder"
-            app:layout_constraintTop_toBottomOf="@+id/exit" />
+            app:layout_constraintTop_toBottomOf="@+id/menu" />
 
 
         <Constraint
