--- a/app/app/src/main/res/navigation/stock_navigation.xml
+++ b/app/app/src/main/res/navigation/stock_navigation.xml
@@ -24,6 +24,13 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_mainStockFragment_to_bestStockFragment"
+            app:destination="@id/bestStockFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/stockSearchFragment"
@@ -44,4 +51,16 @@
         android:name="com.kharazmic.app.main.stock.stock.StockFragment"
         android:label="fragment_stock"
         tools:layout="@layout/fragment_stock" />
+    <fragment
+        android:id="@+id/bestStockFragment"
+        android:name="com.kharazmic.app.main.stock.main.BestStockFragment"
+        android:label="BestStockFragment" >
+        <action
+            android:id="@+id/action_bestStockFragment_to_stockFragment"
+            app:destination="@id/stockFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
 </navigation>
