--- a/app/app/src/main/res/layout/activity_constant_income_detail.xml
+++ b/app/app/src/main/res/layout/activity_constant_income_detail.xml
@@ -197,9 +197,8 @@
                                 android:padding="10dp">
 
                                 <TextView
-                                    android:layout_width="0dp"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="0.6"
                                     android:text="مدیران سرمایه گذاری:"
                                     android:textAppearance="@style/vazir_font"
                                     android:textColor="@color/dark_purple"
@@ -207,7 +206,9 @@
 
                                 <TextView
                                     android:id="@+id/investment_manager"
-                                    android:layout_width="wrap_content"
+                                    android:layout_width="0dp"
+                                    android:layout_weight="0.6"
+                                    android:gravity="end"
                                     android:layout_height="wrap_content"
                                     android:textAppearance="@style/vazir_font"
                                     android:textColor="@color/black"
